fix: button align

--- a/data/styles/html.css
+++ b/data/styles/html.css
@@ -21,6 +21,7 @@
 }
 
 button {
+  display: inline-block;
   text-align: center !important;
   padding: 5 10 5 10;
 }
